2010-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 3049645 ] SLP hostname lib won't build

2010-08-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	*  cimXmlRequest.c test/TestProviders/cmpiTestMethodProvider.c,
		test/schema/root/cimv2/Test_Method.mof 
	[ 3048960 ] method array types not filled in

2010-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	[ 3048944 ] Bump downloaded CIM schema to 2.26

2010-07-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3026606 ] Prov idle unload may not call all cleanup functions

2010-07-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, providerDrv.c, providerRegister.h
	[ 3012365 ] enableIndications() only called once per provider group
	(patch by Tim Potter)

2010-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* interopProvider.c
	[ 3003509 ] sfcb must configure IndicationFilterName 
	(based on patch by sto)

2010-07-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3010272 ] Indication providers always unloaded when idle

2010-07-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3017845 ] disableIndications not called on provider shutdown

	* indCIMXMLHandler.c:
	[ 2952628 ] Handler is not removed from interop-Hashtable when CI fails
	(based on patch by Till Steinbach)

	* profileProvider.c:
	[ 3022919 ] profileProvider (SLP) has increasing memory usage over time

2010-06-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 3023502 ] Memory leak on CreateClass

	* indCIMXMLHandler.c:
	[ 2950545 ] indCIMXMLHandler destination schema correction wrong
	(proposed by Till Steinbach)

	* cimcClientSfcbLocal.c:
	[ 2968599 ] Wrong trace msg for invokeMethod (local interface)
	(patch by Klaus Kaempf)

2010-06-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	[ 3016863 ] Data corruption when replacing array properties
