@@ -161,6 +161,7 @@ Till Steinbach
 02/19/2010 [ 2952912 ] resultSockets variable is not used threadsafe
 06/17/2010 [ 2950521 ] Provider operations are wrongly traced
 07/01/2010 [ 2952628 ] Handler is not removed from interop-Hashtable when CI fails
+08/20/2010 [ 3035165 ] objectSize in objectImpl.c is not used thread safe
 
 sto (SF id)
 ------------------
