@@ -24,6 +24,7 @@ Bugs fixed:
 - 3048944 Bump downloaded CIM schema to 2.26
 - 3048960 method array types not filled in
 - 3049645 SLP hostname lib won't build
+- 3035165 objectSize in objectImpl.c is not used thread safe
 
 Changes in 1.3.8
 ================
