@@ -3,6 +3,10 @@
 	* Makefile.am:
 	[ 3049645 ] SLP hostname lib won't build
 
+	* objectImpl.c:
+	[ 3035165 ] objectSize in objectImpl.c is not used thread safe
+	(patch by Till Steinbach)
+
 2010-08-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 	*  cimXmlRequest.c test/TestProviders/cmpiTestMethodProvider.c,
 		test/schema/root/cimv2/Test_Method.mof 
